// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Number renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 hzDeMy"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 ccoEUx"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 dVfDyD"
          disabled={true}
          placeholder=" "
          type="number"
          value="123"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 flWAsI"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jpqMLI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 bmhpWf"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jpqMLI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 eISfXZ"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jpqMLI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 hzDeMy"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 ccoEUx"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 dVfDyD"
          placeholder=" "
          readOnly={true}
          type="number"
          value="1234"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 hzDeMy"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 ccoEUx"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 dVfDyD"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 hzDeMy"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 ccoEUx"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 dVfDyD"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 hzDeMy"
        dir="rtl"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
        dir="rtl"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 ccoEUx"
        dir="rtl"
        placeholder="e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 dVfDyD"
          dir="rtl"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="LabelInner-vrrjt0-0 jmYFGi"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <input
        className="Input-qkdgvx-0 hzDeMy"
        placeholder="medium e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <input
        className="Input-qkdgvx-0 ccoEUx"
        placeholder="large e.g. 1234"
        type="number"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 bJeakm"
          placeholder="xlarge e.g. 1234"
          type="number"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 gjPXKJ"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 dsbLWm"
        placeholder="e.g. 1234"
        type="number"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 kEpyYM"
      >
        <input
          className="Input-qkdgvx-0 dVfDyD"
          placeholder="e.g. 1234"
          type="number"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
